Fixed dropdown button overlapping

--- a/src/app/appbar/appbar.component.scss
+++ b/src/app/appbar/appbar.component.scss
@@ -7,7 +7,7 @@ kendo-appbar{
 }
 
 kendo-appbar-section{
-  width: 30%;
+  width: 24%;
   justify-content: center;
 }
 
@@ -18,7 +18,8 @@ kendo-appbar-section a button , kendo-appbar a{
 }
 
 kendo-appbar-section.language{
-  width: 5%;
+  width: 75px;
+  margin-left:2px;
   justify-content: center;
 }
 
